Increased memory for unit tests